tests/error/error14.jan
// error14: Non-output variable non-zero at end

x -> y;

y += x


